# Object-Detection-and-Avoidance-with-Intel-Realsense

./: .gitignore  Examples for Intel RealSense SDK 2.0.lnk  README.md  main.py  rs-capture-mode-1.cpp  rs-dnn-yolo.cpp  rs-dnn.cpp  rs-hello-realsense.cpp
GPU/: CMakeLists.txt  test  test.cpp
cmake/: CMakeLists.txt  rs2.cpp  test  test.cpp
mode1/: CMakeLists.txt  rs-hello-realsense.cpp
mode2/: mode2.py  rs-dnn.cpp
neural_image_captioning-master/neural_image_captioning-master/datasets/IAPR_2012/preprocessed_data/: complete_data.txt  id_to_word.p  test_data.txt  training_data.txt  validation_data.txt  word_to_id.p
neural_image_captioning-master/neural_image_captioning-master/datasets/IAPR_2012preprocessed_data/: complete_data.txt  id_to_word.p  test_data.txt  training_data.txt  validation_data.txt  word_to_id.p
neural_image_captioning-master/neural_image_captioning-master/datasets/IAPR_2012reprocessed_data/: complete_data.txt  id_to_word.p  test_data.txt  training_data.txt  validation_data.txt  word_to_id.p
neural_image_captioning-master/neural_image_captioning-master/src/: data_manager.py  evaluator.py  generator.py  models.py  visualization.ipynb  visualization.py
python/: audio.py  master.py  mode1.py  mode2.py  mode3.py  mouseclick.py  obj_detection_config.py  object_detection_model.py  sound.py  test.py  view.py
tools/rs-imu-calibration/: README.md
wrappers/csharp/Intel.RealSense/: NativeMethods.cs
wrappers/unrealengine4/Plugins/RealSense/Source/RealSense/Public/: RealSenseTypes.h
